# FRAME-FM

./: .buildinfo  .gitignore  66706619.err  Bella_626_R_867f_70c9_33ec.jsonld  README-Sprint-2025.md  README.md  Shapefile_Dataloader_soilprops.ipynb  Shapefile_Dataloader_test.ipynb  Shapefiletoxarray.py  cosmos-uk_sitemetadata_2013-2024.csv  csv_loader.ipynb  csv_loader.py  genindex.html  gp_spatiotemporal_model_corrected.py  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  test_imports.py  torchx_mlflow_demo.py  train_croissant.py  train_eurosat.py  train_eurosat_ak.py  train_gp_spatiotemporal.py  train_tfds_croissant.py  uv-intro.md
.doctrees/: codeautolink-cache.json  index.doctree
.doctrees/__intersphinx_cache__/: IPython_objects.inv
.doctrees/api/: index.doctree
.doctrees/api/FRAME_FM/: index.doctree
.doctrees/api/ImageLabel_Dataset/: index.doctree
.doctrees/api/InputOnly_Dataset/: index.doctree
.github/ISSUE_TEMPLATE/: framework-review.yaml
.github/workflows/: buildDocs.yml
_modules/: ImageLabel_Dataset.html  InputOnly_Dataset.html  index.html
_modules/FRAME_FM/dataloaders/: combined_dataloader.html  demo_EurosatDataloader.html  demo_eurosat.html  demo_geotiff_dataloader.html
_static/: custom.css
api/: index.html
api/FRAME_FM/: index.html
api/ImageLabel_Dataset/: index.html
api/InputOnly_Dataset/: index.html
conf/: config.yaml  config_croissant.yaml  config_gp.yaml
configs/: FRAME_FM_DEMO.yaml  config.yaml  config.yml  config_convAE.yaml  configs_README.md
configs/data/: MVP_EuroSAT100.yaml  config_FRAME_shpfiles.yaml  demo_data.yaml  demo_eurosat.yaml  dummy.yml  eurosat.yaml  land_cover_map.yaml  spatial_land_cover.yaml
configs/experiment/: base.yaml  best_MM_MNIST_MAE.pth  best_MNIST_MAE.pth  best_Moving_MNIST_MAE.pth
configs/logging/: demo_log.yaml  demo_mlflow.yaml  demo_mlflow_EuroSAT100.yaml  mlflow.yaml  mlflow.yml  mlflow_land_cover.yaml  mlflow_mmmae_demo.yaml
configs/model/: DEMO-AE-EuroSAT100-FullSpectrum-S.yaml  EuroSATConvAE.yaml  convAE.yaml  demo_mmmae.yaml  demo_model.yaml  simple.yml
configs/trainer/: DEMO-Trainer.yaml  convAE_trainer.yaml  default.yaml  default.yml
data/: README.md
docs/: conf,py  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
experiments/: eurosat_AE_working.py  experiments_README.md
experiments/conf/: config.yaml
generic-data-loader/: .gitignore  README.md  TO-DOs.txt  main.py  requirements.txt  selectors.yaml  test_transforms.py
generic-data-loader/big_geo_loader/: datasets.py  settings.py  transforms.py  utils.py  zarr_writer.py
notebooks/: notebook_README.md  sprint_nb_1.ipynb  vision_transformer_test.ipynb
notebooks/jupyter/: data_loader_era5.ipynb  era5_eda.ipynb  notebook_README.md  vision_transformer_test.ipynb
notebooks/marimo/: notebook_README.md
notes/: code_review_errors.md  gp_example_plan.md  you are a oceanographer specialised in ml programm.md
scripts/: convaejob_orchid  jobdebug_edsai  landcover_mmmae  multi_gpu_job_orchid  scripts_README.md
src/FRAME_FM/: cli.py  package_README.md
tests/: cosmos-uk_balrd_hydrosoil_sh_2014-2024.csv  cosmos-uk_balrd_hydrosoil_sh_2014-2024_flags.csv  cosmos-uk_balrd_hydrosoil_sh_2014-2024_qc_flags.csv  test_gridded_txt.py  test_qc.py  test_transforms.py  tests_README.md
tests/datasets/: common.py  test_base_dataset.py  test_base_gridded_dataset.py  test_project_dataset.py
tests/gridded_txt_dataloaders/: grid_txt_end_to_end.py  test_gridded_txt.py
tests/transforms/: test_transforms.py
tests/xarray_dataloaders/: test_xarray.py
(+191 files in other folders)
