[project]
name = "frame-fm"
dynamic = ["version"]
description = "A package for the simplification of training deep learning models for environmental data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "mlflow>=3.6.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
]
[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
]
better-notebook = [
    "marimo>=0.19.6",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton",
    "sphinx_last_updated_by_git",
    "sphinx-codeautolink",
    "sphinx-design",
    "nbsphinx",
    "numpydoc",
    "myst-parser",
    "IPython",
    "sphinx-autoapi",
    "sphinx_rtd_dark_mode",
]
data = [
    "torchgeo>=0.8.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling"

[tool.uv]
package = false

[tool.uv-dynamic-versioning]
fallback-version = "0.1.0"
version-source = "vcs"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
