[project]
name = "frame-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "mlflow>=3.6.0",
    "pytorch-lightning>=2.6.0",
    "rioxarray>=0.19.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
